# dimtensor

./: .gitignore  .mutmut.toml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: ORCHESTRATOR_PROMPT.md  settings.local.json
.github/: DISCUSSIONS_WELCOME.md
.github/workflows/: dimtensor-coverage.yml  dimtensor-security.yml  dimtensor-test.yml  docker-build-push.yml
.plans/: 2026-01-09_acoustics-units.md  2026-01-09_advanced-dataset-loaders.md  2026-01-09_automatic-unit-inference.md  2026-01-09_basics-notebook.md  2026-01-09_benchmark-suite.md  2026-01-09_biophysics-units.md  2026-01-09_conservation-tracking.md  2026-01-09_constraint-system.md  2026-01-09_cuda-kernels.md  2026-01-09_cuda-profiling.md  2026-01-09_data-analysis-notebook.md  2026-01-09_datasets-guide.md  2026-01-09_dim-graph-conv.md  2026-01-09_dim-transformer.md  2026-01-09_dimensional-linting.md  2026-01-09_equations-guide.md  2026-01-09_geophysics-units.md  2026-01-09_gnn-physics-research.md  2026-01-09_inference-guide.md  2026-01-09_information-theory-units.md  2026-01-09_jax-guide.md  2026-01-09_materials-science-units.md  2026-01-09_matplotlib-visualization.md  2026-01-09_memory-profiling.md  2026-01-09_nuclear-physics-units.md  2026-01-09_photometry-units.md  2026-01-09_physics-ml-guide.md  2026-01-09_physics-priors.md  2026-01-09_physics-simulation-notebook.md  2026-01-09_pytorch-guide.md  2026-01-09_pytorch-training-notebook.md  2026-01-09_rust-backend.md  2026-01-09_unit-inference-notebook.md  2026-01-09_validation-guide.md  2026-01-09_visualization-guide.md  2026-01-10_arrow-integration.md  2026-01-10_cupy-integration.md  2026-01-10_dask-integration.md  2026-01-10_numba-integration.md  2026-01-10_ray-integration.md  (+15 more)
api/dimarray/: index.html
api/functions/: index.html
api/units/: index.html
benchmarks/: .gitignore  README.md  asv.conf.json  benchmarks.py  demo.py
benchmarks/suites/: __init__.py  competitors.py  numpy_ops.py  torch_ops.py
changelog/: index.html
comparisons/: index.html
comparisons/feature-matrix/: index.html
comparisons/vs-astropy/: index.html
comparisons/vs-pint/: index.html
comparisons/vs-unyt/: index.html
docker/: .dockerignore  Dockerfile  README.md  docker-compose.base.yml  docker-compose.jupyter.yml  docker-compose.ml.yml  quickstart.ipynb
docs/: changelog.md  getting-started.md  index.md
docs/api/: dimarray.md  ecosystem.md  functions.md  inference.md  integrations.md  torch.md  units.md  validation.md  visualization.md
docs/comparisons/: feature-matrix.md  index.md  vs-astropy.md  vs-pint.md  vs-unyt.md
docs/guide/: datasets.md  equations.md  examples.md  inference.md  jax.md  operations.md  physics-ml.md  pytorch.md  testing.md  units.md  validation.md  visualization.md
docs/performance/: benchmarks.md
docs/troubleshooting/: errors.md  faq.md  migration.md
examples/: 01_basics.ipynb  02_physics_simulation.ipynb  03_pytorch_training.ipynb  04_data_analysis.ipynb  05_unit_inference.ipynb  README.md
examples/paper_reproduction/: schwarzschild_radius.py  schwarzschild_report.md  schwarzschild_result.json
getting-started/: index.html
guide/examples/: index.html
guide/operations/: index.html
guide/units/: index.html
kubernetes/: README.md
kubernetes/examples/: README.md  batch-job.yaml  hpa.yaml  inference-deployment.yaml  service.yaml  training-job.yaml
kubernetes/examples/workloads/: batch-analysis.py  inference-server.py  pinn-training.py
kubernetes/helm/dimtensor/: Chart.yaml  README.md  values-batch.yaml  values-inference.yaml  values-training.yaml  values.yaml
performance/benchmarks/: index.html
rust/: Cargo.toml
rust/src/: dimension.rs  lib.rs  ops.rs
search/: search_index.json
serverless/: README.md
serverless/aws/: Dockerfile  requirements.txt  template.yaml
serverless/examples/: batch_simulation.py  model_inference.py  physics_api.py
serverless/gcp/cloudfunctions/: .gcloudignore  requirements.txt
serverless/gcp/cloudrun/: Dockerfile  requirements.txt
src/dimtensor/: __init__.py  __main__.py  _rust.py  benchmarks.py  config.py  errors.py  functions.py  profiling.py
src/dimtensor/accessibility/: __init__.py  colors.py  formatters.py  html.py  matplotlib_theme.py  plotly_theme.py
src/dimtensor/cli/: __init__.py  lint.py
src/dimtensor/core/: __init__.py  dimarray.py  dimensions.py  units.py
src/dimtensor/cupy/: __init__.py  dimarray.py
src/dimtensor/dask/: __init__.py  dimarray.py
src/dimtensor/datasets/: __init__.py  card.py  registry.py  validation.py
src/dimtensor/domains/: __init__.py  acoustics.py  biophysics.py  cgs.py  geophysics.py  imperial.py  information.py  materials.py  natural.py  nuclear.py  photometry.py  planck.py
src/dimtensor/education/: __init__.py  exercises.py  grading.py  progress.py  (+2 more)
tests/: __init__.py  test_accessibility.py  test_arrow.py  test_benchmarks.py  test_chaos.py  test_config.py  test_constraints.py  test_cupy.py  test_dask.py  test_dataset_card.py  test_dataset_io.py  test_dataset_loaders.py  test_dataset_validation.py  test_dim_graph.py  test_dimarray.py  test_dimensions.py  test_domains.py  test_experiments.py  test_fuzz.py  test_hub_package.py  test_hub_package_simple.py  test_i18n.py  test_inference.py  test_io.py  test_lint.py  test_load.py  test_monte_carlo.py  test_numba.py  test_priors.py  test_profiling.py  test_property_based.py  test_ray.py  test_research.py  test_rust_backend.py  test_schema.py  test_serverless.py  test_tensorflow.py  test_torch_benchmarks.py  test_transformer.py  test_uncertainty.py  (+2 more)
tests/test_education/: __init__.py  test_exercises.py  test_grading.py  test_progress.py  test_textbook.py  test_validation.py
textbook/: _config.yml  _toc.yml  index.md
textbook/intro/: chapter_01_units.ipynb  chapter_02_dimensions.ipynb  chapter_03_operations.ipynb
troubleshooting/errors/: index.html
troubleshooting/faq/: index.html
troubleshooting/migration/: index.html
(+95 files in other folders)
