[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimtensor"
version = "3.3.0"
description = "Unit-aware tensors for physics and scientific machine learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Marc Sperzel" }
]
keywords = [
    "physics",
    "units",
    "dimensions",
    "scientific-computing",
    "machine-learning",
    "numpy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
torch = [
    "torch>=2.0.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
netcdf = [
    "netCDF4>=1.6.0",
]
parquet = [
    "pyarrow>=12.0.0",
]
xarray = [
    "xarray>=2023.1.0",
]
sympy = [
    "sympy>=1.12",
]
all = [
    "dimtensor[torch,jax,netcdf,parquet,xarray,sympy]",
]

[project.urls]
Homepage = "https://github.com/marcoloco23/dimtensor"
Documentation = "https://marcoloco23.github.io/dimtensor"
Repository = "https://github.com/marcoloco23/dimtensor"
Issues = "https://github.com/marcoloco23/dimtensor/issues"

[project.scripts]
dimtensor = "dimtensor.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dimtensor"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
